# Vending_Machine

./: README.md  package-lock.json
vending_machine/: .gitignore  README.md
vending_machine/backend/: CMakeLists.txt  Makefile  build.sh  run_dev.ps1  run_dev.sh
vending_machine/backend/cmake/: FindJSON.cmake
vending_machine/backend/include/: inventory.hpp  payment.hpp  transaction.hpp  vending_machine.h
vending_machine/backend/lib/: crow_all.hpp
vending_machine/backend/src/: inventory.cpp  main.cpp  payment.cpp  server.cpp  transaction.cpp  vending_machine.cpp
vending_machine/frontend/: index.html  package-lock.json  package.json  vite.config.js
vending_machine/frontend/public/: index.html
vending_machine/frontend/src/: App.jsx  main.jsx
